# beacon

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  package.json  pnpm-lock.yaml  requirements.txt  start-dev.bat  start-dev.sh
.github/workflows/: deploy-docs.yml  discord-changelog.yml  release-desktop.yml
backend/: backend.spec  build_backend.py  requirements.txt  run.py
backend/app/: config.py  main.py  mcp_server.py  repository.py  state.py
backend/config/: tests.json
backend/tests/: test_assertions.py  test_environment_capture.py  test_history_runner_integration.py  test_history_service.py  test_jsonplaceholder_catalog.py  test_project_reorder.py  test_web_page_target.py
config/: tests.example.json
core/: tester.py
docs/: changelog.md  deployment.md  desktop.md  getting-started.md  index.md  mcp.md
docs/.vitepress/: config.mts
docs/features/: assertions.md  scenarios.md  send-inspect.md  variables.md  (+1 more)
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vite.config.ts.timestamp-1783002888101-d64e7b58d6983.mjs  vitest.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: desktop.json
frontend/src-tauri/skills/beacon/: SKILL.md
frontend/src-tauri/src/: main.rs  mcp_registration.rs
graphify-out/: .graphify_analysis.json  .graphify_detect.json  .graphify_labels.json  .graphify_labels.json.sig  .graphify_python  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
landing/: .gitignore  .npmrc  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
scripts/: dev.mjs  validate-desktop-release.test.mjs
templates/: index.html
(+86 files in other folders)
