[package]
name = "beacon"
version = "0.3.6"
description = "Beacon - API Workspace"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Shell/sidecar functionality lives in tauri-plugin-shell in v2 (the old v1
# "shell-open" cargo feature no longer exists on the tauri crate).
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# Guarantees a single app process so we never spawn a second backend sidecar
# against the same config file (concurrent backends clobber each other's writes).
tauri-plugin-single-instance = "2"
# In-app auto-update: checks the GitHub Releases manifest, downloads + verifies
# the signed installer, and relaunches via the process plugin.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Native OS notifications (e.g. "run finished") so long runs surface results
# even when Beacon is in the background.
tauri-plugin-notification = "2"
# Anonymous usage analytics — sends natively from Rust (no webview CORS, unlike
# the web SDK which fails on macOS's tauri:// scheme). Needs an ambient Tokio
# runtime (see main.rs) for its background flush task.
tauri-plugin-aptabase = "1.0.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
# Surfaces Aptabase transport failures in the terminal during `tauri dev`.
# The logger is initialized only in debug builds (see main.rs).
env_logger = "0.11"
log = "0.4"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
